--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "LATEST_VERSION='0.4.8-dev.3' nodemon index.js",
+    "dev": "LATEST_VERSION='0.4.9' nodemon index.js",
+    "dev-host": "LATEST_VERSION='0.4.9' 0.0.0.0 nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,6 +16,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1"
   },
   "devDependencies": {
