--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "LATEST_VERSION='0.4.9' nodemon index.js",
-    "dev-host": "LATEST_VERSION='0.4.9' 0.0.0.0 nodemon index.js",
+    "dev": "LATEST_VERSION='0.4.9' SALT_ROUNDS=10 nodemon index.js",
+    "dev-host": "LATEST_VERSION='0.4.9' SALT_ROUNDS=10 nodemon 0.0.0.0 index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,6 +16,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
     "bcrypt": "^5.0.1",
     "express": "^4.17.1"
   },
